--- a/Proposal.html
+++ b/Proposal.html
@@ -217,7 +217,12 @@
         </ol>
 </div>
 <div>
-    <h2>Hello</h2>
+    <img src="UI Designs\Hero.png" alt="Hero Section" width="1000" height="600" align="left"  style="vertical-align:middle;margin:50px 0px">
+    <img src="UI Designs\About Us.png" alt="About Us Section" width="1000" height="800"  align="right" style="vertical-align:middle;margin:50px 0px">
+    <img src="UI Designs\Service.png" alt="Services Section" width="1200" height="1200"  align="left" style="vertical-align:middle;margin:50px 0px">
+    <img src="UI Designs\Latest Trends.png" alt="Latest Trends Section" width="1200" height="1000"  align="right" style="vertical-align:middle;margin:50px 0px">
+    <img src="UI Designs\Contact Section.png" alt="Contact Us Section" width="1000" height="500"  align="left" style="vertical-align:middle;margin:50px 0px">
+    <img src="UI Designs\Footer Section.png" alt="Footer Section" width="1440" height="633">
 </div>
 </body>
 </html>
