--- a/Proposal.html
+++ b/Proposal.html
@@ -17,6 +17,7 @@
             
         }
         body {
+             
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 60px;
@@ -38,7 +39,7 @@
     </div>
     <div class="content">
         <h2>Project Title:
-        <span > <big>Smart Crop Rotation Optimization </big></span></h2><hr>
+        <span > <big>Smart Crop Rotation Optimization </big></span></h2> <hr>
         <h4><u>Description </u> : <i>Crop rotation is critical for maintaining soil fertility and mitigating climate change. Alternating C3 and C4 plants optimizes photosynthesis and reduces carbon emissions.</i></h4>
         <h4><u>Objective </u> : <i>Develop an AI/ML tool to recommend optimal crop rotation patterns. Data Analysis: Use historical and climatic data to analyze crop yields.</i></h4>
         <h4><u>Expected Outcomes </u> : <i>Enhance agricultural productivity, reduce carbon footprints, and promote sustainable farming practices.</i> </h4>
@@ -217,12 +218,12 @@
         </ol>
 </div>
 <div>
-    <img src="UI Designs\Hero.png" alt="Hero Section" width="1000" height="600" align="left"  style="vertical-align:middle;margin:50px 0px">
-    <img src="UI Designs\About Us.png" alt="About Us Section" width="1000" height="800"  align="right" style="vertical-align:middle;margin:50px 0px">
-    <img src="UI Designs\Service.png" alt="Services Section" width="1200" height="1200"  align="left" style="vertical-align:middle;margin:50px 0px">
-    <img src="UI Designs\Latest Trends.png" alt="Latest Trends Section" width="1200" height="1000"  align="right" style="vertical-align:middle;margin:50px 0px">
-    <img src="UI Designs\Contact Section.png" alt="Contact Us Section" width="1000" height="500"  align="left" style="vertical-align:middle;margin:50px 0px">
-    <img src="UI Designs\Footer Section.png" alt="Footer Section" width="1440" height="633">
+    <img src="UI Designs\Hero.png" alt="Hero Section" style="width: 50%; height: auto; vertical-align: middle; margin: 50px 0px" align="left">
+    <img src="UI Designs\About Us.png" alt="About Us Section" style="width: 50%; height: auto; vertical-align: middle; margin: 50px 0px" align="right">
+    <img src="UI Designs\Service.png" alt="Services Section" style="width: 50%; height: auto; vertical-align: middle; margin: 50px 0px" align="left">
+    <img src="UI Designs\Latest Trends.png" alt="Latest Trends Section" style="width: 50%; height: auto; vertical-align: middle; margin: 50px 0px" align="right">
+    <img src="UI Designs\Contact Section.png" alt="Contact Us Section" style="width: 50%; height: auto; vertical-align: middle; margin: 50px 0px" align="left">
+    <img src="UI Designs\Footer Section.png" alt="Footer Section" style="width: 50%; height: auto;">
 </div>
 </body>
 </html>
